tdf#107847 Make sure m_xContext is not empty

Change-Id: I21d87b3a3d9732266e8c7d18cc07924700aaaafc